Refactor to allow eight-notes

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
       <div class="col-xs-2 col-xs-offset-3">
         <label>Which clef
           <br/>
-          <input type="radio" name="clef" value="both" checked> Both
-          <br/>
-          <input type="radio" name="clef" value="treble"> Treble
+          <input type="radio" name="clef" value="treble" checked> Treble
           <br/>
           <input type="radio" name="clef" value="bass"> Bass
+          <br/>
+          <input type="radio" name="clef" value="both"> Both
         </label>
       </div>
     </div>
