--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/master.css" media="screen" title="no title" charset="utf-8">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+
+
+  <!-- hahahoho -->
+  <script type="text/javascript" src=" https://unpkg.com/vexflow/releases/vexflow-debug.js"></script>
+  <script type="text/javascript" src="javascript/vexflowPractice.js"></script>
+
+
+
+
+
   <script type="text/javascript" src="javascript/utils.js"></script>
   <script type="text/javascript" src="javascript/model.js"></script>
   <script type="text/javascript" src="javascript/controller.js"></script>
@@ -57,6 +68,21 @@
     <!-- these divs are hidden -->
     <div id="audio-els"></div>
     <div id="audio-click"></div>
+
+
+
+    <!-- hahahoho -->
+    <div id="hahahoho" style="background-color:white"></div>
+
+    <svg width="150" height="100" viewBox="0 0 3 2">
+      <rect width="1" height="2" x="0" fill="#008d46" />
+      <rect width="1" height="2" x="1" fill="#ffffff" />
+      <rect width="1" height="2" x="2" fill="#d2232c" />
+    </svg>
+
+
+
+
   </div>
 </body>
 
