--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 
   <!-- hahahoho -->
-  <script type="text/javascript" src=" https://unpkg.com/vexflow/releases/vexflow-debug.js"></script>
+  <script type="text/javascript" src="javascript/vexflow-debug.js"></script>
   <script type="text/javascript" src="javascript/vexflowPractice.js"></script>
+
 
 
 
@@ -33,7 +34,10 @@
     <p>This application can help you learn the names of the notes on the grand staff. When you click "play" (or press spacebar), the playback begins starting with a four beat count in. As each note plays, type the corresponding letter on your keyboard. For example, if the next note is middle C, press the "c" key on your keyboard. Make sure to keep a steady rhythm because key presses that are too early or too late won't count.</p>
     <p>Generate new random melody by clicking the "Generate New Melody" button. You can generate new melodies only bass clef notes, only treble clef notes, or notes fromt he full grand staff. You also have the option of changing the tempo to suit your practicing needs.</p>
     <h3 id="score"></h3>
-    <canvas id="canvas" width="900" height="300"></canvas>
+
+    <!-- <canvas id="canvas" width="900" height="300"></canvas> -->
+    <div id="svg-holder" style="background-color:white"></div>
+
     <div class="row margin-top-20">
       <div class="col-xs-2 col-xs-offset-3">
         <button id="play" class="btn btn-primary btn-lg" type="button" name="button">Play</button>
@@ -64,6 +68,16 @@
         </label>
       </div>
     </div>
+    <div class="row margin-top-20">
+      <div class="col-xs-2 col-xs-offset-3">
+        <label>Which rhythm
+          <br/>
+          <input type="radio" name="rhythm" value="QUARTER_NOTES" checked> Quarter Notes Only
+          <br/>
+          <input type="radio" name="rhythm" value="QUARTER_AND_EIGHT_NOTES"> Quarter and Eight notes
+        </label>
+      </div>
+    </div>
     <div class="margin-top-40"></div>
     <!-- these divs are hidden -->
     <div id="audio-els"></div>
@@ -79,6 +93,7 @@
       <rect width="1" height="2" x="1" fill="#ffffff" />
       <rect width="1" height="2" x="2" fill="#d2232c" />
     </svg>
+
 
 
 
