Add differnt rhythms (quarter notes with rests, quarter and eighth, quarter and eighth with rests). Add ability to use metronome

--- a/index.html
+++ b/index.html
@@ -7,18 +7,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/master.css" media="screen" title="no title" charset="utf-8">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-
-
-
-  <!-- hahahoho -->
   <script type="text/javascript" src="javascript/vexflow-debug.js"></script>
-  <script type="text/javascript" src="javascript/vexflowPractice.js"></script>
-
-
-
-
-
-
   <script type="text/javascript" src="javascript/utils.js"></script>
   <script type="text/javascript" src="javascript/model.js"></script>
   <script type="text/javascript" src="javascript/controller.js"></script>
@@ -26,6 +15,10 @@
   <script type="text/javascript" src="javascript/viewDrawing.js"></script>
   <script type="text/javascript" src="javascript/viewEventListeners.js"></script>
   <script type="text/javascript" src="javascript/setUp.js"></script>
+
+
+
+  <script type="text/javascript" src="javascript/vexflowPractice.js"></script>
 </head>
 
 <body>
@@ -35,7 +28,6 @@
     <p>Generate new random melody by clicking the "Generate New Melody" button. You can generate new melodies only bass clef notes, only treble clef notes, or notes fromt he full grand staff. You also have the option of changing the tempo to suit your practicing needs.</p>
     <h3 id="score"></h3>
 
-    <!-- <canvas id="canvas" width="900" height="300"></canvas> -->
     <div id="svg-holder" style="background-color:white"></div>
 
     <div class="row margin-top-20">
@@ -79,26 +71,17 @@
       </div>
     </div>
     <div class="margin-top-40"></div>
-    <!-- these divs are hidden -->
-    <div id="audio-els"></div>
-    <div id="audio-click"></div>
 
 
 
-    <!-- hahahoho -->
-    <div id="hahahoho" style="background-color:white"></div>
-
-    <svg width="150" height="100" viewBox="0 0 3 2">
-      <rect width="1" height="2" x="0" fill="#008d46" />
-      <rect width="1" height="2" x="1" fill="#ffffff" />
-      <rect width="1" height="2" x="2" fill="#d2232c" />
-    </svg>
+    <div id="hahahoho" style="background-color:white"></div>  </div>
 
 
 
 
 
-  </div>
+
+    
 </body>
 
 </html>
