--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/master.css" media="screen" title="no title" charset="utf-8">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+  <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+
+
   <script type="text/javascript" src="javascript/vexflow-debug.js"></script>
   <script type="text/javascript" src="javascript/utils.js"></script>
   <script type="text/javascript" src="javascript/model.js"></script>
@@ -17,8 +21,8 @@
   <script type="text/javascript" src="javascript/setUp.js"></script>
 
 
-
-  <script type="text/javascript" src="javascript/vexflowPractice.js"></script>
+  <!-- hahahoho -->
+  <!-- <script type="text/javascript" src="javascript/vexflowPractice.js"></script> -->
 </head>
 
 <body>
@@ -41,47 +45,45 @@
 
     <div class="row margin-top-20">
       <div class="col-xs-2 col-xs-offset-3">
+        <button id="new-melody" class="btn btn-default btn-lg" type="button" name="new-melody">Generate New Melody</button>
+      </div>
+    </div>
+    <div class="row margin-top-20">
+      <div class="col-xs-2 col-xs-offset-3">
+        <label for="tempo">Metronome</label>
+        <input id="metronome" type="checkbox" checked data-toggle="toggle">
+      </div>
+    </div>
+    <div class="row margin-top-20">
+      <div class="col-xs-2 col-xs-offset-3">
         <label for="tempo">Tempo</label>
         <input id="tempo" class="form-control" type="number" min="20" max="140" step="1" value="60" />
       </div>
-      <div class="col-xs-2 col-xs-offset-2">
-        <button id="new-melody" class="btn btn-default btn-lg center-block" type="button" name="new-melody">Generate New Melody</button>
-      </div>
     </div>
     <div class="row margin-top-20">
       <div class="col-xs-2 col-xs-offset-3">
-        <label>Which clef
-          <br/>
-          <input type="radio" name="clef" value="treble" checked> Treble
-          <br/>
-          <input type="radio" name="clef" value="bass"> Bass
-          <br/>
-          <input type="radio" name="clef" value="both"> Both
-        </label>
+        <label>Which clef</label>
+        <select id="clef" class="form-control">
+          <option selected value="treble">Treble</option>
+          <option value="bass">Bass</option>
+          <option value="rhythm_only">Rhythm only</option>
+        </select>
       </div>
     </div>
     <div class="row margin-top-20">
-      <div class="col-xs-2 col-xs-offset-3">
-        <label>Which rhythm
-          <br/>
-          <input type="radio" name="rhythm" value="QUARTER_NOTES" checked> Quarter Notes Only
-          <br/>
-          <input type="radio" name="rhythm" value="QUARTER_AND_EIGHT_NOTES"> Quarter and Eight notes
-        </label>
+      <div class="col-xs-5 col-xs-offset-3">
+        <label>Which rhythm</label>
+        <select id="rhythm" class="form-control">
+          <option selected value="QUARTER_NOTES">Quarter notes</option>
+          <option value="QUARTER_NOTES_WITH_RESTS">Quarter notes with rests</option>
+          <option value="QUARTER_AND_EIGHT_NOTES">Quarter and eighth notes</option>
+          <option value="QUARTER_AND_EIGHT_NOTES_WITH_RESTS">Quarter and eighth notes with rests</option>
+        </select>
+      </div>
       </div>
     </div>
     <div class="margin-top-40"></div>
-
-
-
-    <div id="hahahoho" style="background-color:white"></div>  </div>
-
-
-
-
-
-
-    
+    <!-- <div id="hahahoho" style="background-color:white"></div>  </div> -->
 </body>
 
 </html>
