--- a/index.html
+++ b/index.html
@@ -32,6 +32,39 @@
     <p>Generate new random melody by clicking the "Generate New Melody" button. You can generate new melodies only bass clef notes, only treble clef notes, or notes fromt he full grand staff. You also have the option of changing the tempo to suit your practicing needs.</p>
     <h3 id="score"></h3>
 
+    <div class="row margin-top-20">
+      <div class="col-xs-2">
+        <label for="tempo">Metronome</label>
+        <input id="metronome" type="checkbox" checked data-toggle="toggle">
+      </div>
+      <div class="col-xs-2">
+        <label for="tempo">Tempo</label>
+        <input id="tempo" class="form-control" type="number" min="20" max="140" step="1" value="60" />
+      </div>
+      <div class="col-xs-2">
+        <label>Which clef</label>
+        <select id="clef" class="form-control">
+          <option selected value="treble">Treble</option>
+          <option value="bass">Bass</option>
+          <option value="rhythm_only">Rhythm only</option>
+        </select>
+      </div>
+      <div class="col-xs-5 col-xs-offset-1">
+        <label>Which rhythm</label>
+        <select id="rhythm" class="form-control">
+          <option selected value="QUARTER_NOTES">Quarter notes</option>
+          <option value="QUARTER_NOTES_WITH_RESTS">Quarter notes with rests</option>
+          <option value="QUARTER_AND_EIGHT_NOTES">Quarter and eighth notes</option>
+          <option value="QUARTER_AND_EIGHT_NOTES_WITH_RESTS">Quarter and eighth notes with rests</option>
+        </select>
+      </div>
+    </div>
+    <div class="row margin-top-20 margin-bottom-20">
+      <div class="col-xs-2">
+        <button id="new-melody" class="btn btn-default btn-lg" type="button" name="new-melody">Generate New Melody</button>
+      </div>
+    </div>
+
     <div id="svg-holder" style="background-color:white"></div>
 
     <div class="row margin-top-20">
@@ -43,47 +76,9 @@
       </div>
     </div>
 
-    <div class="row margin-top-20">
-      <div class="col-xs-2 col-xs-offset-3">
-        <button id="new-melody" class="btn btn-default btn-lg" type="button" name="new-melody">Generate New Melody</button>
-      </div>
-    </div>
-    <div class="row margin-top-20">
-      <div class="col-xs-2 col-xs-offset-3">
-        <label for="tempo">Metronome</label>
-        <input id="metronome" type="checkbox" checked data-toggle="toggle">
-      </div>
-    </div>
-    <div class="row margin-top-20">
-      <div class="col-xs-2 col-xs-offset-3">
-        <label for="tempo">Tempo</label>
-        <input id="tempo" class="form-control" type="number" min="20" max="140" step="1" value="60" />
-      </div>
-    </div>
-    <div class="row margin-top-20">
-      <div class="col-xs-2 col-xs-offset-3">
-        <label>Which clef</label>
-        <select id="clef" class="form-control">
-          <option selected value="treble">Treble</option>
-          <option value="bass">Bass</option>
-          <option value="rhythm_only">Rhythm only</option>
-        </select>
-      </div>
-    </div>
-    <div class="row margin-top-20">
-      <div class="col-xs-5 col-xs-offset-3">
-        <label>Which rhythm</label>
-        <select id="rhythm" class="form-control">
-          <option selected value="QUARTER_NOTES">Quarter notes</option>
-          <option value="QUARTER_NOTES_WITH_RESTS">Quarter notes with rests</option>
-          <option value="QUARTER_AND_EIGHT_NOTES">Quarter and eighth notes</option>
-          <option value="QUARTER_AND_EIGHT_NOTES_WITH_RESTS">Quarter and eighth notes with rests</option>
-        </select>
-      </div>
-      </div>
-    </div>
     <div class="margin-top-40"></div>
     <!-- <div id="hahahoho" style="background-color:white"></div>  </div> -->
+  </div>
 </body>
 
 </html>
